# hh.ru

./: .env  .env.example  .gitignore  .gitignore.bak  README.md  database.test.ts  hh_parser.db  hh_vacancies.db  main.py  package.json  pyproject.toml  requirements.txt  run.py  setup.py  test_db.py  vacancy.service.test.ts  vacancy.service.ts
hh_parser/: __init__.py  main.py
hh_parser/core/: __init__.py  parser.py
hh_parser/database/: sqlite_db.py
hh_parser/exporter/: __init__.py  csv_exporter.py
src/: api.py  database.py  db_manager.py  hh_api.py
tests/: conftest.py  test_db2.py  test_exporter.py  test_main.py  test_parser.py
